# budget-automation

./: .gitignore  BUDGET_SHEETS_DESIGN.md  CATEGORIZATION_DESIGN.md  CLAUDE.md  README.md  pyproject.toml
categories/: default.json
config/: google_sheet_config.json
src/: __init__.py  categorizer.py  cli.py  logging_config.py  models.py  pipeline.py
src/cli/: __init__.py  categorize.py  recategorize.py  summarize.py  upload_budget.py
src/clients/: __init__.py  gsheets.py  ollama.py
src/parser/: __init__.py  base.py  ollama.py  pdfplumber_parser.py
src/prompts/: __init__.py  categorize.py  parse.py
src/sheets/: __init__.py  uploader.py
