[project]
name = "budget-automation"
version = "0.1.0"
description = "Parse credit card statement PDFs and categorize transactions using local LLMs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic==2.10.6",
    "loguru==0.7.3",
    "httpx==0.28.1",
    "pillow==11.1.0",
    "pdfplumber>=0.11.8",
    "gspread>=6.0",
    "google-auth>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "ruff==0.9.3",
]

[project.scripts]
categorize = "src.cli.categorize:main"
summarize = "src.cli.summarize:main"
upload-budget = "src.cli.upload_budget:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true
